--- a/project/resources/sass/modules/_defaults.scss
+++ b/project/resources/sass/modules/_defaults.scss
@@ -9,9 +9,4 @@ $experimental-support-for-khtml: false;
 // Defaults
 $background-color: #ecedef !default;
 $text-color: #404040 !default;
-
-// Links
-$link-color: #0071b2;
-$link-active-color: #4bcbd9;
-$link-current-color: #b5bf00;
-$link-disabled-color: #dbdcdd;
+$link-color: #0071b2 !default;
