Moving HTML5 Reset out of base and into global css file. Otherwise it would get repeated for every file that imports base.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,9 @@ Requires:
 // See modules/_base.scss
 @import "modules/base";
 
+// HTML5 Reset
+@import "compass/reset";
+
 // Import page globals
 @import "partials/header";
 @import "partials/footer";
