--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 		<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
 		<script src="{{ MEDIA_URL }}js/libs/modernizr-2.0b1.min.js"></script>
 	</head>
-	<body class="{{ PAGE|lower }}" data-page-id="{{ PAGE }}">
+	<body class="{{ PAGE|lower }}" data-page-class="{{ PAGE }}">
 		<div id="container">
 			<header>
 				
