Correcting page.js path. Adding sample example page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,8 +64,9 @@
 							"{{ MEDIA_URL }}js/red/site.js",
 					
 							// Site Specific
+							"{{ MEDIA_URL }}js/example/base/page.js",
 							"{{ MEDIA_URL }}js/example/site.js",
-							"{{ MEDIA_URL }}js/example/page.js"
+							"{{ MEDIA_URL }}js/example/home.js"
 						
 							{% else %}
 							// jQuery Plugins Minified
