Adding sample partial.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,5 +26,8 @@ Requires:
 @import "partials/header";
 @import "partials/footer";
 
+// Any other partials?
+// @import "partials/feature"
+
 // Any IE styles?
 @import "partials/ie";
