--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,7 +9,7 @@ Description:
 
 Requires:
 	- Sass 3.1.0 <http://sass-lang.com/>
-	- Compass 0.11 <http://beta.compass-style.org/>
+	- Compass 0.11 <http://compass-style.org/>
 
 Requires:
 	- <modules/_base.scss>
