ordering of site.js and base/page.js changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,15 +62,15 @@
 							{% if DEBUG %}
 							// jQuery Plugins
 							"{{ MEDIA_URL }}js/libs/plugins/jquery.easing.js",
-							"{{ MEDIA_URL }}js/libs/plugins/jquery.tmpl.js"
+							"{{ MEDIA_URL }}js/libs/plugins/jquery.tmpl.js",
 						
 							// RED Framework
 							"{{ MEDIA_URL }}js/red/base/class.js",
 							"{{ MEDIA_URL }}js/red/site.js",
 					
 							// Site Specific
-							"{{ MEDIA_URL }}js/example/base/page.js",
 							"{{ MEDIA_URL }}js/example/site.js",
+							"{{ MEDIA_URL }}js/example/base/page.js",
 							"{{ MEDIA_URL }}js/example/home.js"
 							{% else %}
 							// jQuery Plugins Minified
