Adding global role attributes to flag page-wide header/hav/footer elements.

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,13 +34,13 @@
 	</head>
 	<body class="{{ PAGE|lower }}{% if DEBUG %} holmes-debug{% endif %}" data-page-class="{{ PAGE }}">
 		<div id="container">
-			<header>
-				
+			<header role="banner">
+				<nav role="navigation"></nav>
 			</header>
 			<div id="main" role="main">
 				
 			</div>
-			<footer>
+			<footer role="contentinfo">
 				
 			</footer>
 		</div> <!--! end of #container -->
