--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8" />
+
+		<!-- Prefetch your CDN URL: http://j.mp/bplatednsfetch -->
+		<link rel="dns-prefetch" href="{{ MEDIA_URL }}" />
+
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 		<title>{% block title %}{% endblock title %}</title>
