Adding HTML comment.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 		<!-- Prefetch your CDN URL: http://j.mp/bplatednsfetch -->
 		<link rel="dns-prefetch" href="{{ MEDIA_URL }}" />
 
+		<!-- Target latest IE, Google Chrome Frame -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 		<title>{% block title %}{% endblock title %}</title>
