Formatting PAGE variable.

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
 		<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
 		<script src="{{ MEDIA_URL }}js/libs/modernizr-2.0b1.min.js"></script>
 	</head>
-	<body class="{{ PAGE|lower }}{% if TEMPLATE_DEBUG %} holmes-debug{% endif %}" data-page-class="{{ PAGE }}">
+	<body class="{{ PAGE|lower }}{% if TEMPLATE_DEBUG %} holmes-debug{% endif %}" data-page-class="{{ PAGE|capfirst }}">
 		<div id="container">
 			<header role="banner">
 				<nav role="navigation"></nav>
