Add reference to new shell.js file.

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,8 @@
 							// Site Specific
 							"{{ MEDIA_URL }}js/example/site.js",
 							"{{ MEDIA_URL }}js/example/base/page.js",
+							
+							"{{ MEDIA_URL }}js/example/shell.js",
 							"{{ MEDIA_URL }}js/example/home.js"
 							{% else %}
 							// All Minified
