--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,6 +11,9 @@
 		<!-- Prefetch your CDN URL: http://j.mp/bplatednsfetch -->
 		<link rel="dns-prefetch" href="{{ MEDIA_URL }}" />
 
+		<!-- Set MEDIA_URL parameter -->
+		<link rel="media-url" href="{{ MEDIA_URL }}" />
+
 		<!-- Target latest IE, Google Chrome Frame -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
@@ -18,8 +21,6 @@
 
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-
-		<meta name="media-url" content="{{ MEDIA_URL }}" />
 
 		<!-- Mobile viewport optimized: j.mp/bplateviewport -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
