--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ Requires:
 
 // Import page globals
 @import "partials/header";
+@import "partials/globals";
 @import "partials/footer";
 
 // Any other partials?
