Moving home.scss to the views folder, setting it up as a sample view.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,3 +32,8 @@ Requires:
 
 // Any IE styles?
 @import "partials/ie";
+
+// You can import your individual page views here
+// Alternatively, if you'd like individual .css files for each page
+// you can move these files to the sass root and remove the "_" prefix
+@import "views/home";
