Default <title> in base.html matches __PROJECT_NAME__ variable

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,7 +14,7 @@
 		<!-- Set MEDIA_URL parameter -->
 		<link rel="media-url" href="{{ MEDIA_URL }}" />
 
-		<title>{% block title %}{% endblock title %}</title>
+		<title>{% block title %}__PROJECT_NAME__{% endblock title %}</title>
 
 		<meta name="description" content="" />
 		<meta name="author" content="" />
