Adding cross-browser-friendly gradient mixin.

--- a/sass/modules/_mixins.scss
+++ b/sass/modules/_mixins.scss
@@ -33,3 +33,8 @@
 		zoom: 1;
 	}
 }
+
+@mixin grad($top, $btm) {
+	background-color: mix($top, $btm);
+	@include background-image(linear-gradient($top, $btm));
+}
