Adding a content block.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -44,7 +44,8 @@
 				<nav role="navigation"></nav>
 			</header>
 			<div id="main" role="main">
-				
+				{% block content %}
+				{% endblock content %}
 			</div>
 			<footer>
 				
