--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]><html class="no-js ie6 oldie" lang="en"><![endif]-->
-<!--[if IE 7]><html class="no-js ie7 oldie" lang="en"><![endif]-->
-<!--[if IE 8]><html class="no-js ie8 oldie" lang="en"><![endif]-->
-<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8" />
@@ -35,7 +34,7 @@
 		<!-- All JavaScript at the bottom, except for Modernizr and Respond.
 		     Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
 		     For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-		<script src="{{ STATIC_URL }}js/libs/modernizr-2.0.js"></script>
+		<script src="{{ STATIC_URL }}js/libs/modernizr-2.0.6.js"></script>
 		<script src="{{ STATIC_URL }}js/libs/respond.js"></script>
 	</head>
 	<body class="{{ PAGE|lower }}{% if TEMPLATE_DEBUG %} holmes-debug{% endif %}" data-page-class="{{ PAGE|capfirst }}">
@@ -58,10 +57,10 @@
 				(function () {
 					Modernizr.load([{
 						// jQuery
-						load : "//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js",
+						load : "//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js",
 						complete : function () {
 							if (!window.jQuery) {
-								Modernizr.load("{{ STATIC_URL }}js/libs/jquery-1.6.2.min.js");
+								Modernizr.load("{{ STATIC_URL }}js/libs/jquery-1.6.4.min.js");
 							}
 						}
 					}, { // SITE
