--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,6 +7,9 @@
 	<head>
 		<meta charset="utf-8" />
 
+		<!-- Use the .htaccess and remove these lines to avoid edge case issues. More info: h5bp.com/b/378 -->
+  		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
 		<!-- Prefetch your CDN URL: http://j.mp/bplatednsfetch -->
 		<link rel="dns-prefetch" href="{{ STATIC_URL }}" />
 
