Removing references to SASS/Compass version numbers.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,8 +8,8 @@ Description:
 	Global styles
 
 Requires:
-	- Sass 3.1.0 <http://sass-lang.com/>
-	- Compass 0.11 <http://compass-style.org/>
+	- Sass <http://sass-lang.com/>
+	- Compass <http://compass-style.org/>
 
 Requires:
 	- <modules/_base.scss>
