--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -96,7 +96,7 @@
 
 					// Google Analytics
 					// Change UA-XXXXX-X to be your site's ID
-					window._gaq = [["_setAccount", "UAXXXXXXXX1"], ["_trgackPageview"], ["_trackPageLoadTime"]];
+					window._gaq = [["_setAccount", "UAXXXXXXXX1"], ["_trackPageview"], ["_trackPageLoadTime"]];
 
 					Modernizr.load({
 						load : ("https:" == location.protocol ? "//ssl" : "//www") + ".google-analytics.com/ga.js"
