--- a/resources/compass/sass/style.scss
+++ b/resources/compass/sass/style.scss
@@ -33,4 +33,4 @@ Requires:
 // You can import your individual page views here
 // Alternatively, if you'd like individual .css files for each page
 // you can move these files to the sass root and remove the "_" prefix
-@import "views/home";
+@import "views/welcome";
