--- a/resources/compass/sass/modules/_defaults.scss
+++ b/resources/compass/sass/modules/_defaults.scss
@@ -10,5 +10,17 @@ $legacy-support-for-ie6: false;
 
 // Defaults
 $background-color: #fff !default;
-$text-color: #000 !default;
-$link-color: #000 !default;
+$text-color: #fff !default;
+$link-color: #f9ceff !default;
+
+
+$fonts-p1 : "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$fonts-p2 : "ComfortaaRegular", Helvetica, "Helvetica Neue", Arial, sans-serif !default;
+
+$fonts-h1 : "LavanderiaRegular", Georgia, Times, "Times New Roman", serif !default;
+$fonts-h2: "Averia Serif Libre", serif !default;
+$fonts-h3 : "CharlemagneStdBold", sans-serif !default;
+
+$max-width : 80%;
+
+$offset : 200px; // offset created by the header and angles
